Fixed the wrapping issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,7 +69,7 @@ a  {
   background-repeat: no-repeat;
   background-size: cover;
 
-  flex-wrap: wrap;
+  
 }
 
 ul {
